Fixed issue 15, alignment bug on self posts in posts list Working on issue 7: added linkify plugin and implemented it on user profiles Working on issue 21: added doUserProfile(), prettified them a little
Former-commit-id: 891ab805a3ec72d497ee7b43a76ac83b728c5eeb

--- a/style.css
+++ b/style.css
@@ -648,3 +648,14 @@ div.postlist-arrow {
 .mourning {
   border-top: 5px solid #000;
 }
+
+#user-profile td:first-child {
+  color: #444;
+  padding-right: 1em;
+}
+#user-profile td:nth-child(2) {
+  color: #000;
+}
+#user-profile a {
+  text-decoration: underline;
+}
